Merged V3.2 to HEAD    16939: Merged V3.1 to V3.2       16938: ETHREEOH-622: AuthorityServiceImpl uses userNameMatcher to check for admin users according to case sensitivity settings       16934: ETHREEOH-2584: Coding error in BaseSSOAuthenticationFilter    16924: LDAP Performance       - Created NodeService addChild variants that can add associations to multiple parents (groups/zones) at the same time with a single path check.       - Created AuthorityService addAuthority variant that can add an authority to multiple groups at the same time, using the above       - Optimized group association creation strategy. Groups and Persons created in 'depth first' order (root groups first, parents last). Prevents the nodes having to be reindexed.
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/alfresco/HEAD/root@17070 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261